# impactbench

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml
lib/: config.py  paths.py
lib/core/: aggregate.py  client.py  cost.py  evaluate.py  gen_metrics.py  generate.py  prompts.py  simulate.py  usage.py
lib/pipeline/: aggregate.py  evaluate.py  gen_metrics.py  gen_scenarios.py  simulate.py  utils.py
lib/task/: __init__.py  cache.py  concurrent.py  io.py  retry.py
prompts/: expand_demographic.txt  generate_metrics.txt  generate_scenarios.txt  turn_first.txt  turn_next.txt  user_system.txt
tests/: test_aggregate.py  test_client.py  test_cost.py  test_prompts.py  test_simulate.py  test_task.py
tools/: build_metric_subarea_map.py  generate_metric_meta.py  metrics-source.csv  publish.py
