[project]
name = "bench-py"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
publish = ["boto3>=1.34"]

[tool.setuptools.packages.find]
include = ["lib*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
